---
title: Hospital Management System - Account ERD
---
erDiagram
  ROLE {
    uuid id PK "Primary Key"
    text name UK "Role name"
  }

  USER {
    uuid id PK
    text username UK
    text email UK
    text hashed_password
    uuid role_id FK "Foreign Key to ROLE"
    boolean is_active "Indicates if the user account is active"
    timestamp created_at "Account creation timestamp"
    timestamp updated_at "Last update timestamp"
  }

  DEPARTMENT {
    uuid id PK
    text name UK
    text description
  }

  DOCTOR {
    uuid id PK
    uuid user_id FK "Foreign Key to USER"
    text name
    text gender
    date dob
    text phone
    text address
    text specialty
    uuid department_id FK "Foreign Key to DEPARTMENT"
  }

  PATIENT {
    uuid id PK
    uuid user_id FK "Foreign Key to USER"
    text name
    text gender
    date dob
    text phone
    text address
    text[] chronic_conditions
  }

  WORKING_HOURS {
      uuid id PK
      uuid department_id FK "FK to DEPARTMENT (apply to all doctors)"
      int day_of_week "1=Monday, 7=Sunday"
      time start_time_morning
      time end_time_morning
      time start_time_afternoon
      time end_time_afternoon
  }


  APPOINTMENT {
      uuid id PK
      uuid patient_id FK
      uuid department_id FK
      uuid doctor_id FK "(nullable, assigned later)"
      timestamp start_time "Start time of the 30-min slot"
      timestamp end_time "End time of the 30-min slot"
      text status "'scheduled', 'completed', 'canceled'"
      text notes
      timestamp created_at
  }

  MEDICAL_RECORD {
    uuid id PK
    uuid appointment_id FK "Foreign Key to APPOINTMENT"
    uuid patient_id FK "Foreign Key to PATIENT"
    uuid doctor_id FK "Foreign Key to DOCTOR"
    text subjective_notes "Patient's reported symptoms and concerns"
    json objective_notes "Doctor's observations and measurable findings"
    text assessment "Doctor's analysis and interpretation of the patient's condition"
    text plan "Treatment plan or recommendations"
    json prescription "Prescribed medications and dosages"
    timestamp created_at "Date of the medical record"
  }

  %% "A user has one role"
  USER }o--|| ROLE : "has"

  %% "A user can be a patient"
  USER ||--|| PATIENT : "is a"

  %% "A user can be a doctor"
  USER ||--|| DOCTOR : "is a"

  DEPARTMENT ||--o{ DOCTOR : "employs"

  DEPARTMENT ||--o{ WORKING_HOURS : "has"

  DEPARTMENT ||--o{ APPOINTMENT : "has"

  %% "A patient can have many appointments"
  PATIENT ||--o{ APPOINTMENT : "schedules"

  %% "A doctor can have many appointments"
  DOCTOR ||--o{ APPOINTMENT : "has"

  %% "A patient has a medical history"
  PATIENT ||--o{ MEDICAL_RECORD : "has"

  %% "A doctor records medical history"
  DOCTOR ||--o{ MEDICAL_RECORD : "records"

  %% "An appointment can result in one medical record"
  APPOINTMENT ||--o| MEDICAL_RECORD : "results in"